--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "author": "joshstevens19@hotmail.co.uk",
   "license": "ISC",
   "dependencies": {
-    "@ethersproject/providers": "^5.0.10",
-    "ethers": "^5.0.15"
+    "@ethersproject/providers": "^6.0.0-beta.8",
+    "@ethersproject/abi": "^6.0.0-beta.3",
+    "ethers": "^6.5.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
